--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-responsive-masonry": "^2.1.0",
     "react-scripts-parcel": "0.0.38"
   },
   "scripts": {
