--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.3.4",
-    "react": "^16.8.0",
+    "react": "^16.0.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.8.0",
+    "react-image-gallery": "^1.0.8",
     "react-responsive-masonry": "^2.1.0",
     "react-scripts-parcel": "0.0.38"
   },
