--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["react-app"],
-  "plugins": ["transform-class-properties"]
+  "presets": ["@babel/preset-react"],
+  "plugins": ["transform-class-properties", "@babel/plugin-transform-runtime"]
 }
