--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     ]
   },
   "devDependencies": {
-    "babel-core": "^6.26.3"
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-react": "^7.10.4"
   }
 }
